# codex-auth-manager

./: package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: SettingsModal.tsx
src/utils/: storage.ts
