[package]
name = "codex-manager"
version = "0.1.5"
description = "Codex Account Manager - Manage multiple Codex accounts"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
dirs = "5.0"
tokio = { version = "1", features = ["process", "io-util", "time"] }
notify = "6.1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
